[project]
name = "django-ninja-cache"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "django-ninja>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flake8-bandit>=4.1.1",
    "flake8-comprehensions>=3.16.0",
    "flake8-isort>=6.1.2",
    "flake8-pyproject>=1.2.3",
    "flake8-quotes>=3.4.0",
    "flake8-string-format>=0.3.0",
    "freezegun>=1.5.2",
    "isort>=6.0.1",
    "lazydocs>=0.4.8",
    "mkdocs>=1.6.1",
    "mkdocs-coverage>=1.1.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "mypy>=1.16.0",
    "pep8-naming>=0.15.1",
    "pydocstyle>=6.3.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.7.0",
    "typing-extensions>=4.14.0",
]
